# model-inference

./: .gitignore  classification_inference.py  pyproject.toml
config/: config.yaml
src/dataset/: dataset.py  transformation.py
src/prediction/: predictor.py
src/utils/: common.py
